[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
dotenvy = "0.15.7"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "sqlite", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
